# cookiecutter-templates

./: .gitignore  LICENSE  README.md
python/: cookiecutter.json
python-cookiecutter-template/{{cookiecutter.project_name}}/docs/source/: conf.py
python/hooks/: post_gen_project.py  post_gen_project.sh
python/{{cookiecutter.project_name}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
python/{{cookiecutter.project_name}}/.github/workflows/: build-and-release-docs.yaml  rebase-dev.yaml  release.yaml  run-tests.yaml
python/{{cookiecutter.project_name}}/docs/source/: conf.py  examples.rst  index.rst
python/{{cookiecutter.project_name}}/docs/source/custom/pre-modules/: introduction.md
python/{{cookiecutter.project_name}}/examples/: empty_example.py
python/{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.package_name }}.py
python/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: cli.py
react/: cookiecutter.json
react/hooks/: post_gen_project.sh
react/{{cookiecutter.project_name}}/: .eslintrc.cjs  eslint.config.js  index.html  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
react/{{cookiecutter.project_name}}/src/: App.tsx  index.css  main.tsx
react/{{cookiecutter.project_name}}/src/components/: footer.tsx  navBar.tsx
react/{{cookiecutter.project_name}}/src/pages/: FrontPage.tsx
react/{{cookiecutter.project_name}}/src/pages/views/: baseView.tsx
{{cookiecutter.project_name}}/: .dockerignore  Dockerfile
